--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link rel="stylesheet" href=".resources/css/style.css">
+    <link rel="stylesheet" href="resources/css/style.css" type="text/css">
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-
+<br>
     <a href="#">Download Excursion (Coming soon!)</a>
+<br>
 
-    <img src="" alt="">
+    <video autoplay muted loop>
+    <source src="./resources/videos/excursion.mp4" type="video/mp4">
+    </video>
 
     <h1>Your personal travel guide</h1>
+    <br/>
     <p>Excursion remembers places you like, and recommends new points of interest around you. </p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <a href="#">Download Excursion (Coming soon!)</a>
-    <div class="copyright">
-      <p>&copy;Excursion</p>
-    </div>
-
-
-  </body>
+    <br>
+    <img src="./resources/images/camp.jpg" alt="camp">
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="phone">
+<br>
+<br>
+  <a href="#">Download Excursion (Coming soon!)</a>
+  <p id="copyright">&copy; Excursion</p>
+  <br>
 </html>
